src/index.css
/* Custom Properties, update to change design */

:root{
  --clr-light: hsl(0, 0%, 90%);
  --clr-med: hsl(0, 0%, 82%);
  /* --clr-dark: #303030; */
  --clr-dark: hsl(323 21% 6%);;
  --clr-accent: hsl(317 100% 54%);
  --clr-bg: hsl(323 21% 16%);
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: var(--clr-bg);
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

/* App level */

.app {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: var(--clr-light);
  background-color: var(--clr-bg);
  padding: 0 4em;
  
}

.app_title{
  color: var(--clr-accent);
  text-shadow: 0 3px 10px var(--clr-accent);
}

.section-title{
  /* text-shadow: 0 3px 10px var(--clr-accent); */
  text-shadow: 0 3px 10px var(--clr-light);
}

.app-wrapper {
  display: flex;
  flex-direction: column;
  color: var(--clr-dark);
}

/* Currency conversion */

.currency-converter {
  background-color: var(--clr-dark);
  outline: solid var(--clr-accent);
  padding: 10px;
  margin: 1em;
  /* box-shadow: 0 3px 10px rgb(0 0 0 /0.2); */
  box-shadow: 0 3px 10px var(--clr-accent), inset 0 3px 10px var(--clr-accent);
  text-align: center;
  border-radius: 10px;
  color: var(--clr-light);
}

.currency-converter_wrapper{
  display: flex;
  justify-content: center;
}

@media (max-width: 600px) {
  .currency-converter_wrapper{

    flex-direction: column;
  }
  
}

.exchange-rate {
  color: var(--clr-dark);
  background-color: var(--clr-light);
  box-shadow: 0 3px 10px hsla(0, 0%, 100%, 0.8);
  padding: 20px;
  margin: 10px;
  /* box-shadow: 0 3px 10px rgb(0 0 0 /0.2); */
  /* box-shadow: 0 3px 10px var(--clr-accent); */
  border-radius: 10px;
}

.input-box {
  color: var(--clr-dark);
  background-color: var(--clr-light);
  box-shadow: 0 3px 10px hsla(0, 0%, 100%, 0.8);
  margin: 10px;
  padding: 30px;
  border-radius: 10px;
  /* box-shadow: 0 3px 10px rgb(0 0 0 /0.2); */
  /* box-shadow: 0 3px 10px var(--clr-accent); */
}

button {
  border: none;
  float: right;
  margin: 2px;

}

button:hover {
  background-color: var(--clr-accent);
}

input, select {
  border: none;
  background-color: var(--clr-med);
}

/* News Feed */

.news-feed {
  background-color: var(--clr-dark);
  outline: solid var(--clr-accent);
  color: var(--clr-light);
  /* background: radial-gradient(#303030,#D1D1D1); */
  padding: 1em 3em;
  margin: 1em;
  /* box-shadow: 0 3px 10px rgb(0 0 0 /0.2); */
  box-shadow: 0 3px 10px var(--clr-accent), inset 0 3px 10px var(--clr-accent);
  border-radius: 10px;
  text-align: center;
  
}

.news-feed_item{
  background-color: var(--clr-light);
  padding: .1em;
  margin: 1em 0;
  box-shadow: 0 3px 10px hsla(0, 0%, 100%, 0.8);
  /* box-shadow: 0 3px 10px var(--clr-accent); */
  border-radius: 10px;
  text-align: left;
}

.news-feed_link{
  color: var(--clr-dark);
  text-decoration: none;
}

.news-feed_link:hover{
  color: var(--clr-accent);
}

